<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="unc.edu.kewang.sensorplot.MainActivity">
        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--android:paddingTop="@dimen/activity_vertical_margin"-->

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:padding="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/cardview_light_label" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#d3d3d3" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_name_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace"
                        android:maxEms="10" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_vendor_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_vendor_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_vendor_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_version_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_version_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_power_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_power_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_power_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_resolution_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_resolution_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_resolution_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_range_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_range_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_range_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/tv_light_sensor_reading_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="monospace"
                        android:text="@string/sensor_reading_label" />

                    <TextView
                        android:id="@+id/tv_light_sensor_reading_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:fontFamily="monospace" />
                </FrameLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
